Fix break inside.

--- a/assets/sass/pages/_journal.scss
+++ b/assets/sass/pages/_journal.scss
@@ -179,6 +179,7 @@ $toc_width_mobile: -100vw;
 					line-height: 1.3;
 					margin-bottom: 16px;
 					max-width: 200px;
+					break-inside: avoid;
 					> img {
 						display: none;
 					}
