--- a/style.css
+++ b/style.css
@@ -4310,6 +4310,7 @@ img#wpstats {
 	line-height: 1.3;
 	margin-bottom: 16px;
 	max-width: 200px;
+	break-inside: avoid;
 }
 
 .journal-page-container .journal-grid .journal-column ul > li > img {
